--- a/red store/index.html
+++ b/red store/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="index.ht"><img src="images/images.png" width="125px"></a>
+                    <a href="index.html"><img src="images/images.png" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
