--- a/red store/about.html
+++ b/red store/about.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="images/images.png" width="125px"></a>
+                <a href="index.hml"><img src="images/images.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
