--- a/red store/product.html
+++ b/red store/product.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All products - RedStore</title>
+    <title>RedStore</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/images.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
