--- a/red store/product.html
+++ b/red store/product.html
@@ -245,6 +245,7 @@
                         <li>Facebook</li>
                         <li> Instagram</li>
                         <li>Twittor</li>
+                        <li>Youtube</li>
                     </ul>
                 </div>
 
